# poincare-map-paper

./: .flake8  .gitignore  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg
data/: analytic-bif-diagram.parquet  numeric-bif-diagram.parquet
figures/: bif-diagram.eps  nullclines-uncoupled.pgf
odes/: ml.ode  mlml.ode  mlml_bose.ode
scripts/: check_slopes.py  compute.py  compute_bifdat.py  find_gstar.py  main.py  makefig.py  makefig_bak.py  plot_bifdiagram.py  plot_tauk.py  plot_tauk_bak.py  refactor.py  refactor_model.py
src/poincare_map/: helpers.py  model.py  model_backup.py  ode.py  ode_debug.py  paths.py  plots.py  poincare_map.py
tex/: ar2rc.cls  bibliography.bib  draft.tex  frontiersFPHY.cls  manuscript.tex  r2.tex  response.tex  supplemental.tex  supplementary.tex  supplementary_derivations.tex
tex/sections/: .dir-locals.el  discussion.tex  introduction.tex  methods.tex  results.tex
