[metadata]
name = poincare_map
version = 0.9.0
author = Mark Olenik
author_email = mark.olenik@gmail.com

[options]
package_dir =
    = src
packages = find:
python_requires = ==3.8.6
install_requires =


[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.1.4
package = my_project
extensions =
    markdown
